overflow bug fixed

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -41,7 +41,7 @@ header .logo {
 	position: relative;
 	display: inline-block;
 	
-	overflow-x: hidden;
+	overflow: hidden;
 	
 }
 
